repair food page layout problem, added image to modal, modify NAV in 1024px

--- a/static/global.css
+++ b/static/global.css
@@ -222,13 +222,16 @@ hr {
   }
 }
 
-@media (max-width: 320px) {
-  section {
-    padding: 4em 1em;
-  }
+@media (max-width: 380px) {
   .first-h2,
   h1.first {
     font-size: 1.6em;
+  }
+}
+
+@media (max-width: 320px) {
+  section {
+    padding: 4em 1em;
   }
   .btn-contact {
     padding: 1em;
